[package]
name = "hapi"
authors = ["HAPI"]
version = "0.1.6"
edition = "2021"
description = """
Rust library for using HAPI protocol in cmart contracts on NEAR.
"""
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/ProstoSergei/hapi"
homepage = "https://hapi.one"
documentation = "https://hapi-one.gitbook.io/"
